# AVTrip

./: README.md  build_android.sh  build_android_all.sh
C-practice/: hello.txt  helloword  helloword.c  testenum  testenum.c  testfile  testfile.c  testpoint  testpoint.c  teststruct  teststruct.c
C-practice/compile_test/: add.c  add.h  testmylib  testmylib.c
C-practice/compile_test/testmylib.dSYM/Contents/: Info.plist
C-practice/testenum.dSYM/Contents/: Info.plist
android-build-all_v4.1/pkgconfig/arm64-v8a/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android-build-all_v4.1/pkgconfig/armeabi/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android-build-all_v4.1/pkgconfig/armeabi-v7a/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android-build-all_v4.1/pkgconfig/x86/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android-build-all_v4.1/pkgconfig/x86_64/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android-practice/FFPlayerDemo/app/: CMakeLists.txt  build.gradle
android-practice/FFPlayerDemo/app/src/androidTest/java/com/heqijun/ffplayerdemo/: ExampleInstrumentedTest.java
android-practice/FFPlayerDemo/app/src/main/: AndroidManifest.xml
android-practice/FFPlayerDemo/app/src/main/cpp/: native-lib.cpp
android-practice/FFPlayerDemo/app/src/main/java/com/heqijun/ffplayerdemo/: FFUtils.java  FFVideoView.java  MainActivity.java
android-practice/FFPlayerDemo/app/src/main/res/layout/: activity_main.xml
android-practice/FFPlayerDemo/app/src/main/res/values/: strings.xml
android-practice/FFPlayerDemo/app/src/test/java/com/heqijun/ffplayerdemo/: ExampleUnitTest.java
android-practice/FFPlayerDemo/gradle/wrapper/: gradle-wrapper.properties
android-practice/JniTest/app/: build.gradle
ffmpeg-practice/: dump.aac  dump.h264  extr_video  extra_audio  extra_audio.c  ffmpeg_del  ffmpeg_file.c  ffmpeg_log.c  ffmpeg_ls.c  ffmpeg_rename  firstSDL  firstSDL.c  ls  mediainfor  mediainfor.c  remuxing.c
ffmpeg-practice/ffmpeg_rename.dSYM/Contents/: Info.plist
ffmpeg-practice/firstSDL.dSYM/Contents/: Info.plist
ffmpeg-practice/mediainfor.dSYM/Contents/: Info.plist
ffmpeg_examples-master/: 2.aac  cutvideo.c  decode_video  dump.aac  dump.flv  encode_audio  encode_audio.c  encode_video.c  muxer.c  remuxing
(+25 files in other folders)
